--- a/index.html
+++ b/index.html
@@ -2,7 +2,16 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/aseets/logo/favicon.svg" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./src/assets/logo/favicon.svg"
+    />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/logo/favicon.ico"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semi Wiki</title>
   </head>
