푸터 깃허브 연동, 메뉴 버그 수정

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       type="image/x-icon"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      a {
+        text-decoration: none;
+      }
+    </style>
     <title>Semi Wiki</title>
   </head>
   <body>
